<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pause"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitor_pause" />

        <!-- Button Clear removed as requested -->

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_show_freq"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitor_show_freq" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_hide_freq"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitor_hide_freq" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/packet_monitor_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:scrollbars="vertical" />

</LinearLayout>
